# CS2106-Labs

./: .gitignore  connectToServer.sh  ex3_mmalloc.c  retrieveFromServer.sh
L1/: CMakeLists.txt  Tut2.txt
L1/ex1/: a.out  ex1.c
L1/ex2/: a.out  ex2.c  expected1.out  expected2.out
L1/ex2/a.out.dSYM/Contents/Resources/DWARF/: a.out
L1/ex3/: a.out  ex3.c
L2/ex1/: a.out  ex1.c
L2/ex2/: a.out  alarmClock  ex2.c
L2/ex3/: a.out  alarmClock  clock  ex3.c  return  showCmdArg  stringTokenizer  test  test.c
L2/ex3/a.out.dSYM/Contents/Resources/DWARF/: a.out
L3/ex1/: a.out  ex1.c
L3/ex1/demo/: shdMem  shdMemClient  shdMemServer
L3/ex2/: a.out  ex2.c
L3/ex2/demo/: semaphore  semaphoreI  semaphore_exampleImproved.c
L3/ex3/: ex3.c
L4/ex1/: a.out  ex1_mmalloc.c
L4/ex2/: ex2_mmalloc.c
L4/ex3/: a.out  ex3_mmalloc.c  expected1.out  expected2.out  makefile  script.sh  test1.out  test3.in  test4.in  test5.in  test6.in
L5/: CMakeLists.txt
L5/common/: USFATI
L5/ex1/: a.out  ex1.c  expected1.out
L5/ex2/: a.out  ex2.c  rain.txt  test.sh
L5/ex3/: a.out  ex3.c  test.sh
